--- a/styles.css
+++ b/styles.css
@@ -4,6 +4,8 @@ main {
 
 h1 {
     text-align: center;
+    font-family: 'Courier New', Courier, monospace;
+    height: 100px;
 }
 
 main {
@@ -11,7 +13,7 @@ main {
     justify-content: center;
     background-color: rgb(128, 128, 128);
     border-radius: 10px;
-    width: 700px;
+    width: 500px;
     align-items: center;
 }
 
@@ -20,7 +22,7 @@ section {
     border-radius: 10px;
     display: flex;
     flex-direction: column;
-    width: 700px;
+    width: 500px;
     padding: 15px;
 }
 
@@ -34,6 +36,7 @@ section div {
     border-top-left-radius: 15px;
     border-top-right-radius: 15px;
     text-align: right;
+    padding: 0;
 }
 
 .calc-display p {
@@ -46,8 +49,8 @@ section div {
 
 .operations {
     display: flex;
-    background-color:blanchedalmond
-    
+    background-color:blanchedalmond;
+    padding: 0;
 }
 
 .operations button {
@@ -56,14 +59,22 @@ section div {
     flex-basis: 100%;
     background-color: rgb(255, 209, 141);
     font-size: 20px;
-    border: 0.5px solid rgb(113, 113, 113);
+    border: 0.5px solid black;
     border-radius: 10px;
 }
 
+.operations button:active {
+    background-color: rgb(203, 167, 114);
+    scale: 99%;
+}
+
+
 .digits {
     display: flex;
+    justify-content: center;
     flex-wrap: wrap;
-    background-color:blanchedalmond
+    background-color:blanchedalmond;
+    padding: 0;
 }
 
 .digits button {
@@ -76,3 +87,35 @@ section div {
     border: 0.5px solid black;
     border-radius: 10px;
 }
+
+.digits button:active {
+    background-color: rgb(203, 167, 114);
+    scale: 99%;
+}
+
+.confirm-clear {
+    display: flex;
+    background-color:blanchedalmond;
+    border-bottom-left-radius: 10px;
+    border-bottom-right-radius: 10px;
+}
+
+.confirm-clear button {
+    flex-basis: 100%;
+    height: 50px;
+    border-radius: 10px;
+    margin: 5px;
+}
+
+.confirm-clear button:active {
+    background-color: rgb(193, 199, 205);
+    scale: 99%;
+}
+
+body {
+	background: linear-gradient(180deg,#ffffff, #c4c4c4);
+	background-size: 100% 100%;
+	height: 100vh;
+}
+
+
